# stock_prediction

./: .dockerignore  .env.template  .gcloudignore  .gitignore  .python-version  CLEANUP_SUMMARY.md  DEPLOYMENT_GUIDE.md  Dockerfile  Dockerfile.dashboard  README.md  README_old.md  build_docker.py  cloudbuild-dashboard.yaml  deploy_cloud_native.py  deploy_gcp.py  deploy_simple.py  pyproject.toml  requirements.txt  service_manager.py  simple_api.py  simple_dashboard.py  start_dashboard.py  start_services.py  train_pipeline.py
.streamlit/: config.toml
config/: config.yaml  stocks.yaml
deployment/: api-service.yaml  dashboard-service.yaml
notebooks/: week1_prototype.ipynb
src/api/: main.py
src/dashboard/: app.py
src/data_collection/: __init__.py  data_validator.py  news_collector.py  orchestrator.py  stock_collector.py
src/feature_engineering/: feature_engineer.py
src/training/: stock_predictor.py
src/utils/: config.py  gcs_utils.py  logging_config.py
